--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
 body{
-  font-size: 12px;
+  font-size: 62.5%;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -21,247 +21,19 @@ body{
   flex: 1;
   width: 100%;
   position: relative;
-}
-.header{
-  width: 100%;
-  height: .40rem;
-  line-height: .40rem;
-  font-size:.16rem;
-  border-bottom: 1px solid #ccc;
-  text-align: center;
-  position: relative;
-  background: #fff;
-  .banner-list{
-    width: 100px;
-    height: auto;
-    border:1px #ccc solid;
-    background:skyblue;
-    opacity: 0.7;
-    z-index: 2;
-    position:absolute;
-    left: 43%;
-    top: 30px;
-    display:none;
-    li{
-      border-bottom: 1px #ccc solid;
-
-    }
-    .bg{
-      background:pink;
-      color: #fff;
-    }
-  }
-  a{
-    color:#000;
-    position: absolute;
-    font-size:.14rem;
-    &:nth-child(3){
-      right: 0.15rem;
-    }
-    &:nth-child(1){
-      left: .15rem;
-    }
-  }
-}
-.homepage{
-  display: flex;
-  flex-direction: column;
-}
-.main{
-  -webkit-flex: 1;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  .banner{
-    width: 100%;
-    height: 123px;
-    overflow:hidden;
-    position:relative;
-    li{
-      overflow:hidden;
-      img{
-        width: 100%;
-        height: 123px;
-      }
-    }
-    .swiper-pagination{
-      position:absolute;
-      top:100px;
-    }
-}
-  .list{
-    display:flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    background:#fff;
-    padding-top: .05rem;
-    padding-bottom: .05rem;
-    dl{
-      width: 43%;
-      background:#e1e1e0;
-      display:flex;
-      margin: 0.05rem 0rem;
-      padding: .1rem;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      box-sizing: border-box;
-      dt{
-        img{
-          width: 46px;
-          height: 46px;
-        }
-      }
-      dd{
-        margin-left: 12px;
-        /*span{
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }*/
-      }
-    }
-  }
-  @media screen and(min-width:768px){
-
-  }
-  .con{
-    width: 100%;
-    display:flex;
-    background:#e1e1e0;
-    justify-content: space-around;
-    padding: .1rem 0;
-    flex-wrap: wrap;
-    dl{
-      width: 45%;
-      background:#fff;
-      margin: 0.05rem 0;
-      &:nth-child(1){
-        padding:.30rem 0;
-      }
-      &:nth-child(3){
-        padding:.30rem 0;
-      }
-      &:nth-child(2){
-        margin-left: .1rem;
-        dt{
-          width: 100%;
-          img{
-            width: 100%;
-            height: 185px;
-          }
-        }
-      }
-      &:nth-child(4){
-        margin-left: .1rem;
-        dt{
-          width: 100%;
-          img{
-            width: 100%;
-            height: 185px;
-          }
-        }
-      }
-    }
-    dt{
-      text-align: center;
-      img {
-        &:nth-child(1) {
-          width: 96px;
-          height: 133px;
-        }
-      }
-    }
-    dd{
-      text-align: center;
-      h2{
-        font-size:.18rem;
-        img{
-          width: .27rem;
-          height: .19rem;
-        }
-      }
-      span{
-        display:block;
-        margin-top: .14rem;
-        padding-bottom: .18rem;
-        b{
-          font-size:.14rem;
-        }
-      }
-      h4{
-        margin-top: .12rem;
-        font-weight: normal;
-        text-align: left;
-        margin-left: .1rem;
-        font-size: .14rem;
-      }
-      time{
-        display:block;
-        margin-top: .18rem;
-        color:#ff2c2c;
-        em{
-          color:#ccc;
-          text-decoration: line-through;
-        }
-      }
-    }
-  }
-  @media screen and(min-width:768px){
-    dl{
-      flex:1;
-    }
-  }
+  font-size: .16rem;
 }
 
-.subject-main{
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  width: 100%;
-  .nav{
-    width: 100%;
-    .main-nav{
-      width: 200%;
-      height: 30px;
-      display:flex;
-      line-height: 30px;
-      text-align: center;
-      border-bottom: 1px #ccc solid;
-      overflow:hidden;
-      li{
-        flex:1;
-      }
-    }
-  }
-  .content{
-    display: flex;
-    -webkit-flex: 1;
-    overflow-y: scroll;
-    .swiper-cont {
-      width: 300%;
-      overflow: hidden;
-      .swiper-wrapper {
-        li {
-          width: 100%;
-          img {
-            width: 100%;
-            height: 186px;
-          }
-        }
-
-      }
-    }
-  }
-
-}
 .footer{
+  font-size: .16rem;
   dispaly:-webkit-flex;
   text-align: center;
-  padding-top: .04rem;
-  padding-bottom: .05rem;
   border-top: 1px solid #ccc;
   .footer-nav{
     display: -webkit-flex;
     a{
+      padding-top: .04rem;
+      padding-bottom: .05rem;
       display: -webkit-flex;
       -webkit-flex-direction: column;
       -webkit-flex: 1;
@@ -271,7 +43,8 @@ body{
         font-size: .20rem;
       }
       &:first-child{
-        color: #fd6e90;
+        color: #fff;
+        background: #000;
       }
     }
   }
